# dangerousmusic

./: CHANGELOG.md  CMakeLists.txt  README.md  build-release.bat  build_msvc.bat  dsound.def  package-release.bat  verification-current.txt
dev/: 高级配置参考.ini
example/: 文件夹专辑元数据模板.ini  曲目同名元数据模板.ini
i18n/: LocalMusic.en-us.ini  LocalMusic.zh-hans.ini  dsound.en-us.ini  dsound.zh-hans.ini
ini/: INI配置说明.md  LocalMusic.ini  dsound.ini
src/: AlbumControls.cpp  AlbumControls.h  Common.h  Config.cpp  Config.h  DSoundProxy.cpp  DSoundProxy.h  DpiAwareness.cpp  DpiAwareness.h  FmodApi.cpp  FmodApi.h  GameHooks.cpp  GameHooks.h  InlinePatch.cpp  InlinePatch.h  LocalPlayer.cpp  LocalPlayer.h  Localization.cpp  Localization.h  Logger.cpp  Logger.h  Metadata.cpp  Metadata.h  NowPlayingOverlay.cpp  NowPlayingOverlay.h  PEImage.cpp  PEImage.h  Signature.cpp  Signature.h  dllmain.cpp
tools/: verify_album_features.py  verify_i18n.py  verify_input_exclusivity.py  verify_release_quality.py  verify_target.py
